--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,10 @@ zip_safe = false
 include_package_data = true
 setup_requires =
     setuptools >=38.3.0
+    pycryptodome==3.4.3
+    
+install_requires =
+    pycryptodome==3.4.3
 
 [bdist_wheel]
 universal = true
